# econnect-web

./: .dockerignore  .env.example  .env.production.example  Dockerfile  LICENSE  README.md  README_LANDING_PAGES.md  docker-compose.dev.yml  docker-compose.prod.yml
backend/: .dockerignore  .gitignore  Dockerfile.dev  README.md  alembic.ini  pyproject.toml
backend/.github/workflows/: deploy.yml.disabled
backend/alembic/: env.py
backend/alembic/versions/: 0018a12fa23f_cria_tabela_refresh_tokens.py  094da5b59036_atualiza_datetime_do_refresh_token.py  40f7c78333e4_corrige_nome_da_tabela_de_refresh_.py  4e85225fb34a_atualizado_quantidade_de_char_no_url_da_.py  5876a1ffbe32_cria_tabela_refresh_tokens.py  5e42ca215557_criar_as_tabelas_iniciais.py  7889ffbfff7a_ajeitando_os_ids_das_entidades.py  7b12929cf78f_ajustando_datas_para_usar_timezone.py  7f275ec7540f_atualizado_quantidade_de_char_no_titulo_.py  8a2a2b125b4a_remove_curtidas_da_tabela_noticia.py  99fcdee02b18_adicionando_refresh_tokens.py  b6cb35231785_adicionando_refresh_tokens.py  bf0439cdede5_atualiza_modelo_noticia.py  c251227d9272_atualiza_datetime_do_refresh_token.py
backend/src/: main.py
backend/src/auth/: api_key.py  auth.py  jwt.py  password.py
backend/src/db/: __init__.py  database.py
backend/src/middlewares/: rate_limit_middleware.py
backend/src/routers/: auth_router.py  home_router.py  news_router.py  teste  user_router.py
backend/src/schemas/: fonte_schema.py  noticia_schema.py  usuario_schema.py
backend/src/services/: likes_service.py  news_service.py  rss_service.py  user_service.py
(+77 files in other folders)
